routing, input, output

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <h1 style="text-align: center;">mi aplicación: {{title}}</h1>
 <app-menu></app-menu>
-<app-calificaciones></app-calificaciones>
+<router-outlet></router-outlet>
