--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,7 +1,7 @@
 <ul>
-    <a href="{{lInicio}}" (click)="saludar()">Inicio</a>
-    <a href="" (click)="saludar()">Calificaciones</a>
-    <a href="" (click)="saludar()">Cronograma</a>
-    <a href="" (click)="saludar()">Cursos</a>
-    <a href="" (click)="saludar()">Ayuda</a>
+    <a routerLink="/inicio" >Inicio</a>
+    <a routerLink="/calificaciones" >Calificaciones</a>
+    <a routerLink="/cronograma">Cronograma</a>
+    <a routerLink="/cursos">Cursos</a>
+    <a routerLink="/ayuda">Ayuda</a>
 </ul>
