--- a/src/app/calificaciones/calificaciones.component.css
+++ b/src/app/calificaciones/calificaciones.component.css
@@ -1,3 +1,19 @@
-.clase1{
+.clase1 {
     font-size: 18px;
+}
+
+app-editar-calificacion {
+    width: 49%;
+}
+
+app-editar-calificacion.mostrar {
+    display: block;
+}
+
+.contenedor {
+    display: flex;
+}
+
+.contenedor-lista {
+    width: 49%;
 }
