clase14. consumo de servicios

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,6 +1,6 @@
 <ul>
     <a routerLink="/inicio" >Inicio</a>
-    <a routerLink="/calificaciones" >Calificaciones</a>
+    <a routerLink="/tripulantes" >Tripulantes</a>
     <a routerLink="/cronograma">Cronograma</a>
     <a routerLink="/cursos">Cursos</a>
     <a routerLink="/ayuda">Ayuda</a>
