--- a/src/app/calificaciones/calificaciones.component.html
+++ b/src/app/calificaciones/calificaciones.component.html
@@ -1,18 +1,8 @@
-<h2>Calificaciones del ciclo</h2>
-<div class="contenedor">
-    <div class="contenedor-lista">
-        <div *ngFor="let calificion of listaCalificaciones; let i = index">
-            <h4>nota {{i+1}}, {{calificion.tipoNota}}</h4>
-            <p>nota: {{calificion.nota}}</p>
-           <!--  <p>nota: {{calificion.nota}}</p> -->
-            <p *ngIf="!!calificion.comentario ">comentario: {{calificion.comentario}}</p>
-            <button [ngClass]="{clase1:false, clase2:true}" [ngStyle]="{'color': validarColor(calificion)}" (click)="editar(i)" >
-                Editar
-            </button>
-            <mat-slide-toggle>Toggle me!</mat-slide-toggle>
-        </div>
-    </div>    
-    <app-editar-calificacion (notaEvent)="cambiarNota($event)" *ngIf="canEditar" [nota]="listaCalificaciones[indice].nota.toString()"></app-editar-calificacion>
+<h2>Calificaciones del ciclo para {{tripulante.nombre}}</h2>
+<div *ngFor="let calificion of tripulante.calificaciones;">
+    <p>nota: {{calificion.nota}}</p>
+    <p>comentario: {{calificion.comentario}}</p>
+    <button>
+        Editar
+    </button>
 </div>
-
-
