autenticacion con token

--- a/src/app/components/editar-calificacion/editar-calificacion.component.html
+++ b/src/app/components/editar-calificacion/editar-calificacion.component.html
@@ -1,4 +1,5 @@
-<div class="el nombre de la clase que hace lo que quiero">
+<app-menu></app-menu>
+<div>
     <input type="text" [(ngModel)]="nota"  >
     <button (click)="notaActualizada()" >Guardar</button>
 
