--- a/src/app/components/tripulante/tripulante.component.html
+++ b/src/app/components/tripulante/tripulante.component.html
@@ -1,3 +1,5 @@
+<app-menu></app-menu>
+
 <div class="cabecera">
     <h3>Lista de tripulantes</h3>
     <button routerLink="/crear-tripulante">Registrar Tripulante</button>
